updated url links

--- a/store.html
+++ b/store.html
@@ -100,11 +100,9 @@
               <i class="bi bi-patch-check" style="color: #7289DA;"></i>&nbsp;Basic Package
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
-                <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" > </img></center><br> -->
                 <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£11.64</b> One Time Payment</span></p></center><br>
                 <center><p class="card-text" >&nbsp;<span>Get your own custom <b style="color: #7289DA;">Landing page + Source Code</b></span></p></center><br>
-                <!-- <a href="https://vdevs.tebex.io/package/4882074" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a> -->
-                <a class="btn btn-primary" style="background-color: #1a2535;width: 10rem;" target="_blank" href="https://vdevs.tebex.io/package/4882074" role="button">
+                <a class="btn btn-primary" style="background-color: #1a2535;width: 10rem;" target="_blank" href="https://mythbot.org/buynow" role="button">
                   <i class="fas fa-shopping-cart"></i>
                   &nbsp;Order Now
                 </a>&nbsp;
@@ -121,11 +119,9 @@
               <i class="bi bi-patch-check" style="color: #7289DA;"></i>&nbsp;Standard Package
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
-                <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/standard-package.png" > </img></center><br> -->
                 <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£16.40</b> One Time Payment</span></p></center><br>
-                <center><p class="card-text" >&nbsp;<span>Get your own custom <b style="color: #7289DA;">Landing Page + 1 Extra Page + Source Code</b></span></p></center><br>
-                <!-- <a href="https://vdevs.tebex.io/package/4882076" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a> -->
-                <a class="btn btn-primary" style="background-color: #1a2535;width: 10rem;" target="_blank" href="https://vdevs.tebex.io/package/4882076" role="button">
+                <center><p class="card-text" >&nbsp;<span>Get your own custom <b style="color: #7289DA;">Landing Page + 1 Extra Page + Source Code</b></span></p></center><br><!-- <a href="https://vdevs.tebex.io/package/4882076" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a> -->
+                <a class="btn btn-primary" style="background-color: #1a2535;width: 10rem;" target="_blank" href="https://mythbot.org/buynow" role="button">
                   <i class="fas fa-shopping-cart"></i>
                   &nbsp;Order Now
                 </a>&nbsp;
@@ -141,11 +137,9 @@
                 <i class="bi bi-patch-check" style="color: #7289DA;"></i>&nbsp;Premium Package
                  </div>
                  <div class="card-body" style="background-color: #0e141d;"><br>
-                 <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/premium-package.png"> </img></center><br> -->
                  <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£24.95</b> One Time Payment</span></p></center><br>
-                 <center><p class="card-text" >&nbsp;<span>Get your own custom <b style="color: #7289DA;">Landing Page + 3 Extra Pages + Source Code</b></span></p></center><br>
-                 <!-- <a href="https://vdevs.tebex.io/package/4882078" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a> -->
-                 <a class="btn btn-primary" style="background-color: #1a2535;width: 10rem;" target="_blank" href="https://vdevs.tebex.io/package/4882078" role="button">
+                 <center><p class="card-text" >&nbsp;<span>Get your own custom <b style="color: #7289DA;">Landing Page + 3 Extra Pages + Source Code</b></span></p></center><br> <!-- <a href="https://vdevs.tebex.io/package/4882078" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a> -->
+                 <a class="btn btn-primary" style="background-color: #1a2535;width: 10rem;" target="_blank" href="https://mythbot.org/buynow" role="button">
                   <i class="fas fa-shopping-cart"></i>
                   &nbsp;Order Now
                 </a>&nbsp;
@@ -171,7 +165,6 @@
               <i class="bi bi-patch-check" style="color: #7289DA;"></i>&nbsp;Amateur Package
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
-                <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" > </img></center><br> -->
                 <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£4.99</b> Per Month</span></p></center><br>
                 <center><ul class="list-group">
                           <li class="list-group-item"><i class="bi bi-shield-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;2GB</b>&nbsp;Disk Space</li>
@@ -182,8 +175,7 @@
                         </ul>
                 </center>
                 <br>
-                <!-- <a href="https://vdevs.tebex.io/package/4842894" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a> -->
-                <a class="btn btn-primary" style="background-color: #1a2535;width: 10rem;" target="_blank" href="https://vdevs.tebex.io/package/4842894" role="button">
+                <a class="btn btn-primary" style="background-color: #1a2535;width: 10rem;" target="_blank" href="https://mythbot.org/buynow" role="button">
                   <i class="fas fa-shopping-cart"></i>
                   &nbsp;Order Now
                 </a>&nbsp;
@@ -212,7 +204,7 @@
           </center>
                   <br>
                   <!-- <a href="https://vdevs.tebex.io/package/4842918" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a> -->
-                  <a class="btn btn-primary" style="background-color: #1a2535;width: 10rem;" target="_blank" href="https://vdevs.tebex.io/package/4842918" role="button">
+                  <a class="btn btn-primary" style="background-color: #1a2535;width: 10rem;" target="_blank" href="https://mythbot.org/buynow" role="button">
                     <i class="fas fa-shopping-cart"></i>
                     &nbsp;Order Now
                   </a>&nbsp;
@@ -267,7 +259,6 @@
                   </ul>
           </center>
                   <br>
-                  <!-- <a href="https://vdevs.tebex.io/package/4842921" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a> -->
                   <a class="btn btn-primary" style="background-color: #1a2535;width: 10rem;" target="_blank" href="https://vdevs.tebex.io/package/4842921" role="button">
                     <i class="fas fa-shopping-cart"></i>
                     &nbsp;Order Now
