updated logo. Maybe new domain incoming + new community name??!

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div class="max-w-8xl mx-auto container z-50 sticky top-0 bg-[#0A131F] dark:bg-[#0A0F16] border-b-2 border-[#0F1A27] dark:border-[#0E141D] py-4">
     <div class="headerLogo d-flex align-items-center justify-content-lg-start">
       <a class="navbar-brand" href="/">
-        <img src="./assets/img/vlogot.png" alt="" width="50" height="50" class="d-inline-block align-text-left" style="border-radius: 50rem;">
+        <img src="./assets/img/navlogo.png" alt="" width="50" height="50" class="d-inline-block align-text-left" style="border-radius: 50rem;">
       </a>
       <ul class="nav col-5 col-lg-auto me-lg-auto mb-2 mb-md-0">
         <li><a href="/" class="nav-link px-2 secondary" ><i style="color: #8e9629;"  class="fas fa-house-user"></i>&nbsp;Home</a></li>
@@ -68,7 +68,7 @@
   <div class="container">
     <div class="mainHeader" >
       <center>
-        <img class="logoImg" src="./assets/img/vlogot.png" draggable="false" alt="vdlogo" style="text-align: center;"></center>
+        <img class="logoImg" src="./assets/img/vlogot.png" draggable="false" alt="vdlogo" style="text-align: center;border-radius: 50rem;"></center>
               <h2 style="text-decoration: none; color: #7289DA; font-size: 2rem;  color: #97A9B4;text-align: center;">Voltic Development</h2><br>
           <p class="headerTitle" style="font-size: 1rem;"> 
               Welcome to our new website. We hope you find what you are looking for, In the mean time <br>Join our <a class="discord_id" draggable="false" href="./discord.html" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br><br>
