archive prust + remove from navbar

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <li><a href="./discord.html" class="nav-link px-2 secondary" target="_blank"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;Discord</a></li>
         <li><a href="./tools.html" class="nav-link px-2 secondary" ><i style="color: #7289DA;"  class="bi bi-tools"></i>&nbsp;Tools</a></li>
         <li><a href="./store.html" class="nav-link px-2 secondary"><i class="fas fa-store" style="color: #1c7723;"></i>&nbsp;Store</a></li>
-        <li><a href="./prust.html" class="nav-link px-2 secondary"><i class="fas fa-globe" style="color: #ce422b;"></i>&nbsp;Planet Rust</a></li>
+        <!-- <li><a href="./prust.html" class="nav-link px-2 secondary"><i class="fas fa-globe" style="color: #ce422b;"></i>&nbsp;Planet Rust</a></li> -->
       </ul>
     </div>
     </div>
@@ -207,7 +207,7 @@
           <iframe src="https://dev.diswidgets.org/widgets/nyX9FL7SImD6tE4pWe" width="500" height="750" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
         </div>
       </div>
-      <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
+      <button onclick="topFunction()" id="toTopBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
 </div>
 <br><br><br><br><br><br>
 <div class="d-flex flex-wrap justify-content-between align-items-center " style="background-color: #0e141d;padding-top: .5rem;align-items: center;" >
