--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@
         <li><a href="./discord.html" class="nav-link px-2 secondary" target="_blank"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;Discord</a></li>
         <li><a href="./tools.html" class="nav-link px-2 secondary" ><i style="color: #7289DA;"  class="bi bi-tools"></i>&nbsp;Tools</a></li>
         <li><a href="./store.html" class="nav-link px-2 secondary"><i class="fas fa-store" style="color: #1c7723;"></i>&nbsp;Store</a></li>
-        <li><a href="./prust.html" class="nav-link px-2 secondary"><i class="fas fa-globe" style="color: #ce422b;"></i>&nbsp;Planet Rust</a></li>
+        <!-- <li><a href="./prust.html" class="nav-link px-2 secondary"><i class="fas fa-globe" style="color: #ce422b;"></i>&nbsp;Planet Rust</a></li> -->
       </ul>
     </div>
     </div>
@@ -215,7 +215,7 @@
       </div>
     </div>
         </div>
-        <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
+        <button onclick="topFunction()" id="toTopBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
   </div>
   <br><br><br><br><br><br>
   <div class="d-flex flex-wrap justify-content-between align-items-center " style="background-color: #0e141d;padding-top: .5rem;align-items: center;" >
