updated diswidget url. added staff logo's to local file

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
              <div class="card-header" style="background-color: #1a2535;">
                 <i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;ZeroTwo#9568</div>
                 <div class="card-body" style="background-color: #0e141d;">
-                <center><img class="staffImg" src="https://cdn.mythbot.org/img/dev_sz1knkm7.png" > </img></center><br>
+                <center><img class="staffImg" src="./assets/img/staff/zerotwo.png" > </img></center><br>
                 <h5><a  style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Developer</a></h5><br>
                 <p class="card-text" href="https://discord.com/users/899722893603274793" style="color: #fafafa;">Oh no, Looks like I accidentally became a&nbsp;<a style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Developer</a></p><br>
                 <a class="btn btn-primary" style="background-color: #6b3434;" href="https://zerotwo.zerotwo36.repl.co/" role="button">
@@ -155,7 +155,7 @@
                 <i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;DS_Stift007#4606
                 </div>
                 <div class="card-body" style="background-color: #0e141d;">
-                <center><img class="staffImg" src="https://cdn.mythbot.org/img/dev_h050nej1.png" > </img></center><br>
+                <center><img class="staffImg" src="./assets/img/staff/stift.png" > </img></center><br>
                 <h5><a  style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Developer</a></h5><br>
                 <p class="card-text" href="https://discord.com/users/685180177419993102" style="color: #fafafa;">Founder and Developer of&nbsp;<a style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Midna</a>&nbsp;&&nbsp;<a style="text-decoration: none; color: #7289DA; font-weight: bolder;" >OctoCat</a></p><br><br>
                 <a class="btn btn-primary" style="background-color: #6b3434;" href="https://stift007.glitch.me/" role="button">
@@ -184,7 +184,7 @@
                <i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;Saria#2561
                </div>
                <div class="card-body" style="background-color: #0e141d;"><br>
-               <center><img class="staffImg" src="https://cdn.mythbot.org/img/dev_xf0ts9i0.png" > </img></center><br><br>
+               <center><img class="staffImg" src="./assets/img/staff/saria.png" > </img></center><br><br>
                <h5><a  style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Moderator</a></h5>
                <p class="card-text" href="https://discord.com/users/685180177419993102" style="color: #fafafa;">Moderator and Developer for&nbsp;<a  style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord Bots</a>&nbsp;and&nbsp;<a  style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Servers</a></p><br>
                <a class="btn btn-primary" style="background-color: #6b3434;" href="https://replit.com/Just__Saria" role="button">
@@ -204,7 +204,7 @@
           <h4>Join our <a href="./discord.html" style="text-decoration: none; color: #7289DA; font-weight: bolder;text" >Discord</a> </h4>
         </div>
         <div class="discordWidget">
-          <iframe src="https://dev.diswidgets.org/widgets/nyX9FL7SImD6tE4pWe" width="500" height="750" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+          <iframe title="Demo Widget" className="mx-auto" src="https://beta.diswidgets.org/widgets/nyX9FL7SImD6tE4pWe" width="400" height="575" allowTransparency={true} frameBorder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
         </div>
       </div>
       <button onclick="topFunction()" id="toTopBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
