removed prust button

--- a/store.html
+++ b/store.html
@@ -60,7 +60,7 @@
         <li><a href="./discord.html" class="nav-link px-2 secondary" target="_blank"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;Discord</a></li>
         <li><a href="./tools.html" class="nav-link px-2 secondary" ><i style="color: #7289DA;"  class="bi bi-tools"></i>&nbsp;Tools</a></li>
         <li><a href="./store.html" class="nav-link px-2 secondary"><i class="fas fa-store" style="color: #1c7723;"></i>&nbsp;Store</a></li>
-        <li><a href="./prust.html" class="nav-link px-2 secondary"><i class="fas fa-globe" style="color: #ce422b;"></i>&nbsp;Planet Rust</a></li>
+        <!-- <li><a href="./prust.html" class="nav-link px-2 secondary"><i class="fas fa-globe" style="color: #ce422b;"></i>&nbsp;Planet Rust</a></li> -->
       </ul>
     </div>
     </div>
@@ -152,14 +152,14 @@
         </div>
 
         <!-- TODO Web-Hosting Package -->
-        <div class="header">
+        <!-- <div class="header">
           <h4>Web-Hosting Packages</h4>
         </div>
         <p style="color: #fafafa;">Amazingly Reliable Web Hosting</p>
         <p style="color: #fafafa;">Pay as you go. No long term contracts. Cancel anytime.</p><br>
         <div id="webhosting" class="webhostingPackages">
         
-           <!-- TODO Amateur Package -->
+            TODO Amateur Package 
           <div class="card2 text-white bg-dark" ">
              <div class="card-header" style="background-color: #1a2535;">
               <i class="bi bi-patch-check" style="color: #7289DA;"></i>&nbsp;Amateur Package
@@ -186,13 +186,13 @@
               </div>
             </div>
       
-            <!-- TODO  Professional Package -->
+             TODO  Professional Package 
           <div class="card2 text-white bg-dark" ">
              <div class="card-header" style="background-color: #1a2535;">
               <i class="bi bi-patch-check" style="color: #7289DA;"></i>&nbsp;Professional Package
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
-                  <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" > </img></center><br> -->
+                  <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" > </img></center><br> 
                   <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£6.99</b> Per Month</span></p></center><br>
                   <center><ul class="list-group">
                     <li class="list-group-item"><i class="bi bi-shield-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;10GB</b>&nbsp;Disk Space</li>
@@ -203,7 +203,7 @@
                   </ul>
           </center>
                   <br>
-                  <!-- <a href="https://vdevs.tebex.io/package/4842918" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a> -->
+                  <a href="https://vdevs.tebex.io/package/4842918" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a>
                   <a class="btn btn-primary" style="background-color: #1a2535;width: 10rem;" target="_blank" href="https://mythbot.org/buynow" role="button">
                     <i class="fas fa-shopping-cart"></i>
                     &nbsp;Order Now
@@ -214,13 +214,13 @@
                   </span>
                 </div>
             </div>
-            <!-- TODO Business Package -->
+            TODO Business Package
             <div class="card2 text-white bg-dark" ">
               <div class="card-header" style="background-color: #1a2535;">
                 <i class="bi bi-patch-check" style="color: #7289DA;"></i>&nbsp;Business Package
                  </div>
                  <div class="card-body" style="background-color: #0e141d;"><br>
-                  <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" > </img></center><br> -->
+                  <center><img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" > </img></center><br>
                   <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£9.99</b> Per Month</span></p></center><br>
                   <center><ul class="list-group">
                     <li class="list-group-item"><i class="bi bi-shield-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;100GB</b>&nbsp;Disk Space</li>
@@ -231,7 +231,7 @@
                   </ul>
           </center>
                   <br>
-                  <!-- <a href="https://vdevs.tebex.io/package/4842919" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a> -->
+                  <a href="https://vdevs.tebex.io/package/4842919" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a>
                   <a class="btn btn-primary" style="background-color: #1a2535;width: 10rem;" target="_blank" href="https://vdevs.tebex.io/package/4842919" role="button">
                     <i class="fas fa-shopping-cart"></i>
                     &nbsp;Order Now
@@ -242,13 +242,13 @@
                   </span>
                 </div>
              </div>
-            <!-- TODO Custom Package -->
+            TODO Custom Package
             <div class="card2 text-white bg-dark" ">
               <div class="card-header" style="background-color: #1a2535;">
                 <i class="bi bi-patch-check" style="color: #7289DA;"></i>&nbsp;Custom Package
                  </div>
                  <div class="card-body" style="background-color: #0e141d;"><br>
-                  <!-- <img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" style="margin: 2rem;"> </img><br> -->
+                  <img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" style="margin: 2rem;"> </img><br>
                   <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£x.xx</b> Per Month</span></p></center><br>
                   <center><ul class="list-group">
                     <li class="list-group-item"><i class="bi bi-shield-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;#</b>&nbsp;Disk Space</li>
@@ -269,7 +269,7 @@
                   </span>
                 </div>
              </div>
-        </div>
+        </div> -->
         <br><br><br><br><br><br>
   </div>
   <br><br><br><br><br><br>
